--- a/styles.css
+++ b/styles.css
@@ -51,10 +51,9 @@ header *{
 }
 #image{
     width: 100%;
-    height: 380px;
-    background-image: url("images/pic1.png");
-    background-size: contain;
-    background-repeat: no-repeat;
+    height: 440px;
+    background-image: url("images/pic1.png") ;
+    background-size: cover;
 }
 .basebtn{
     width: 100%;
