--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,10 @@ header *{
 }
 #heading{
     padding: 30px 0;
+    text-align: left;
+}
+#heading *{
+    margin: 20px;
 }
 #heading p{
     color: var(--back_color);
@@ -57,14 +61,14 @@ header *{
 }
 .basebtn{
     width: 100%;
-    height:90px;
+    height:100px;
 }
 .basebtn button{
     width: 90%;
     height: 40px;
     border: 0;
     color: var(--main_color);
-    margin-top: 10px;
+    margin-top: 20px;
     border-radius: 2rem;
     background-color: white;
     font-size: medium;
