--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ header *{
 }
 .basebtn button{
     width: 90%;
-    height: 40px;
+    height: 45px;
     border: 0;
     color: var(--main_color);
     margin-top: 20px;
@@ -89,4 +89,149 @@ header *{
 }
 #para *{
     margin: 20px 10px;
+}
+#tabs{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-evenly;
+}
+#tabs button{
+    width: 25%;
+    height: 30px;
+    border: none;
+    border-radius: 2rem;
+}
+ul{
+    line-height: 1.6;
+    padding-left: 20px;
+    list-style-image: url('images/tick.png') ;
+}
+li {
+    margin-top: 15px;
+}
+li::before{
+    padding-right: 10px;
+}
+#pic2{
+    height: 400px;
+    background-image: url("images/pic3.png");
+    background-size: cover;
+    background-position: center;
+    border-radius: 3rem;
+}
+.card{
+    background-color: white;
+    width:90%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 0px;
+    border-radius: 1rem;
+    margin-top: 15px;
+}
+.card button{
+    width: 90%;
+    height: 45px;
+    border-radius: 2rem;
+    border: none;
+    background-color: var(--main_color);
+    color: white;
+    font-size: 16px;
+}
+.call{
+    width: 40px;
+    height: 40px;
+    background-image: url(images/call.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: var(--back_color);
+    border-radius: 50%;
+    padding: 2px;
+    margin-left: 15px;
+}
+.info{
+    display: flex;
+}
+.info div{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+}
+.wred{
+    background-color: var(--main_color);
+    color: white;
+}
+.wblue{
+    background-color: white;
+    color: black;
+}
+#Courses{
+    display: none;
+}
+#Consult{
+    display: none;
+}
+.swiper{
+    background-color: white;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px;
+    border-radius: 1rem;
+}
+.Rustom{
+    width: 70px;
+    height: 70px;
+    background-image: url("images/pic5.png");
+    background-size: cover;
+    margin: 0 auto;
+}
+#getapp{
+    background-color: var(--main_color);
+    color: white;
+    text-align: center;
+}
+#devices{
+    height: 300px;
+    background-image: url("images/getapp.png");
+    background-size: cover;
+}
+#semi{
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 30%);
+    height: 200px;
+    width: 100%;
+    border-radius: 200px 200px 0 0;
+    background-color: var(--main_color);
+    color: white;
+    text-align: center;
+    padding-top: 80px;
+    z-index: -1;
+}
+.emage{
+    background-color: var(--back_color);
+    width:52px;
+    height: 52px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.lastcard{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+}
+#footer{
+    text-align: center;
+    background-color: var(--main_color);
+    color: white;
+    padding: 10px;
+}
+hr{
+    width: 90%;
 }
