--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,14 @@ body{
     color: var(--main_color);
     font-size: 20px;
 }
-#forbes{
+.forbes{
     font-family: Forbes,sans-serif;
     color: var(--main_color);
     font-size: 23px;
     font-weight: lighter;
+}
+.Des{
+    display: none;
 }
 #times{
     font-family: 'Times New Roman', Times, serif;
@@ -52,6 +55,9 @@ header{
 }
 header *{
     margin: auto 10px;
+}
+#head2{
+    display: none;
 }
 .container {
     display: inline-block;
@@ -78,6 +84,9 @@ header *{
     background-color: var(--main_color);
     color: white;
     margin-top: -20px;
+}
+#content-Desktop{
+    display: none;
 }
 #heading{
     padding: 30px 0;
@@ -112,10 +121,16 @@ header *{
 #feature{
     text-align: center;
 }
+.flexed{
+    display: flex; 
+    justify-content: space-around; 
+    align-items: center;
+}
 #round{
     height: 350px;
     background-image: url("images/pic2.png");
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
 }
 #para{
@@ -129,10 +144,12 @@ header *{
     width: 100%;
     height: 50px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 2rem;
 }
 #tabs button{
     width: 25%;
+    max-width: 150px;
     height: 30px;
     border: none;
     border-radius: 2rem;
@@ -148,11 +165,15 @@ li {
 li::before{
     padding-right: 10px;
 }
+#hideme{
+    display: none;
+}
 #pic2{
     height: 400px;
     background-image: url("images/pic3.png");
-    background-size: cover;
-    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: -4px;
     border-radius: 3rem;
 }
 .card{
@@ -210,10 +231,16 @@ li::before{
 .swiper{
     background-color: white;
     width: 90%;
-    margin: 0 auto;
+    max-width: 300px;
     text-align: center;
     padding: 10px;
     border-radius: 1rem;
+}
+.test1{
+    display: none;
+}
+.test2{
+    display: none;
 }
 .Rustom{
     width: 70px;
@@ -230,7 +257,9 @@ li::before{
 #devices{
     height: 300px;
     background-image: url("images/getapp.png");
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: -2px;
 }
 #semi{
     position: relative;
@@ -272,4 +301,148 @@ hr{
 }
 
 @media screen and (min-width: 650px){ 
+
+    #content{
+        display: none;
+    }
+   #content-Desktop{
+        display: flex;
+        height: 550px;
+        background-color: var(--main_color);
+        color: white;
+        text-align: center;
+   }
+   #Desk{
+        flex: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 30px;
+        padding-left: 10%;
+        text-align: left;
+   }
+   #imaged{
+        flex: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--main_color);
+   }
+   #small{
+    width: 80%;
+    height: 80%;
+    background-image: url("images/pic1.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: -2px;
+   }
+   .basebtn button{
+        width: 60%;
+    }
+    #headingd{
+        margin: 0 50px;
+    }
+    .basebtn{
+        width: 80%;
+        margin: 0 50px;
+    }
+    header{
+        display: none;
+    }
+    #head2{
+        display: flex;
+    }
+    #head2 div{
+        color: black;
+        display: flex;
+    }
+    #hideme{
+        display: block;
+    }
+    .flexed{
+        justify-content: center;
+        column-gap: 2rem;
+    }
+    .Des{
+        display: block;
+        font-size: 18px;
+        font-weight: lighter;
+    }
+    .Sed{
+        flex-direction: row-reverse;
+    }
+    #para{
+        margin: 0 10%;
+    }
+    #Community{
+        display: flex;
+    }
+    #commu{
+        flex: 50%;
+        padding: 10px;
+        margin-left: 10%;
+        margin-right: 5%;
+    }
+    #nity{
+        flex: 50%;
+    }
+    #chg{
+        background-color: var(--main_color);
+        color: white;
+    }
+    .card{
+        max-width: 315px;
+    }
+    .test1{
+        display: block;
+    }
+    video{
+        width: 650px;
+    }
+    #devices{
+        width: 100%;
+        height: 500px;
+        background-image: url("images/getapp.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position-x: -4px;
+        position: relative;
+        left:18%;
+
+    }
+    #semi{
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 75%);
+        height: 600px;
+        width: 100%;
+        border-radius: 600px 600px 0 0;
+        background-color: var(--main_color);
+        color: white;
+        text-align: center;
+        padding-top: 80px;
+        z-index: -1;
+        margin-top: -20%;
+    }
+    #getapp{
+        border-radius: 400px 400px 0 0;
+        display: flex;
+        flex-direction: column-reverse;
+        background-position: center;
+        align-items: center;
+    }
+    #getapp button{
+        width: 50%;
+    }
+    hr{
+        display: none;
+    }
+    #footer>img{
+        width: 30%;
+    }
+}
+@media screen and (min-width: 1100px){
+    .test2{
+        display: block;
+    }
 }
