--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ li::before{
     text-align: center;
     padding: 10px;
     border-radius: 1rem;
-    margin-left: 35px;
+    margin-left: 1.5rem;
 }
 .test1{
     display: none;
