--- a/styles.css
+++ b/styles.css
@@ -441,6 +441,10 @@ hr{
     #footer>img{
         width: 30%;
     }
+    #cont{
+        display: flex;
+        justify-content: space-evenly;
+    }
 }
 @media screen and (min-width: 1100px){
     .test2{
